--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             <div class="variable-input-group" data-type="oprocentowanie">
                                 <div class="fields-wrapper">
                                     <div class="form-group">
-                                        <label class="form-label">Od</label>
+                                        <label class="form-label">Od którego miesiąca</label>
                                         <div class="input-group">
                                             <input type="number" class="form-control variable-cykl" min="2" step="1">
                                             <span class="input-group-text unit-miesiacu">miesiąca</span>
@@ -136,7 +136,7 @@
                                         <input type="range" class="form-range variable-cykl-range" min="2" step="1">
                                     </div>
                                     <div class="form-group">
-                                        <label class="form-label">Oprocentowanie</label>
+                                        <label class="form-label">Nowe oprocentowanie</label>
                                         <div class="input-group">
                                             <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1">
                                             <span class="input-group-text">%</span>
@@ -158,7 +158,7 @@
                             <div class="variable-input-group" data-type="nadplata">
                                 <div class="fields-wrapper">
                                     <div class="form-group">
-                                        <label class="form-label">W</label>
+                                        <label class="form-label">W którym miesiącu</label>
                                         <div class="input-group">
                                             <input type="number" class="form-control variable-cykl" min="1" step="1">
                                             <span class="input-group-text unit-miesiacu">miesiącu</span>
