--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Kredytu Hipotecznego</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Sekcja: Logo i kontrolki zoomu/trybu ciemnego -->
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
@@ -19,8 +20,11 @@
         </div>
     </div>
 
+    <!-- Główny kontener -->
     <div class="container">
+        <!-- Sekcja: Formularz -->
         <div class="form-section" id="formSection">
+            <!-- Podsekcja: Porównaj kredyt -->
             <div class="checkbox-row compare-credit-row">
                 <label class="checkbox-label" id="porownajKredytLabel">
                     <input type="checkbox" id="porownajKredytBtn">
@@ -28,12 +32,17 @@
                     Porównaj Kredyt
                 </label>
             </div>
+
+            <!-- Podsekcja: Nagłówek formularza -->
             <div class="header-row">
                 <h4>Kalkulator Kredytu Hipotecznego</h4>
             </div>
+
+            <!-- Podsekcja: Formularz danych kredytu -->
             <div class="form-container">
                 <div class="form-wrapper">
                     <form id="obligacjeForm">
+                        <!-- Wiersz 1: Kwota kredytu, Ilość rat, Oprocentowanie -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
@@ -62,6 +71,8 @@
                                 <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
                             </div>
                         </div>
+
+                        <!-- Wiersz 2: Rodzaj rat, Prowizja -->
                         <div class="form-row">
                             <div class="form-group">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
@@ -84,6 +95,8 @@
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
+
+                        <!-- Podsekcja: Bezpieczny Kredyt 2% -->
                         <div class="variable-rate-container" id="bezpiecznyKredytContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="bezpiecznyKredytLabel">
@@ -93,6 +106,8 @@
                                 </label>
                             </div>
                         </div>
+
+                        <!-- Podsekcja: Nadpłata Kredytu -->
                         <div class="variable-rate-container" id="nadplataKredytuContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="nadplataKredytuLabel">
@@ -106,6 +121,8 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
+
+                        <!-- Podsekcja: Zmienne Oprocentowanie -->
                         <div class="variable-rate-container" id="variableOprocentowanieContainer">
                             <div class="checkbox-row">
                                 <label class="checkbox-label" id="zmienneOprocentowanieLabel">
@@ -119,11 +136,14 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
+
+                        <!-- Przycisk: Oblicz -->
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki kredytu">Oblicz</button>
                         </div>
 
-                        <!-- Szablon dla zmiennego oprocentowania -->
+                        <!-- Szablony dla dynamicznych pól -->
+                        <!-- Szablon: Zmienne Oprocentowanie -->
                         <template id="variableOprocentowanieTemplate">
                             <div class="variable-input-group" data-type="oprocentowanie">
                                 <div class="fields-wrapper">
@@ -153,7 +173,7 @@
                             </div>
                         </template>
 
-                        <!-- Szablon dla nadpłaty kredytu -->
+                        <!-- Szablon: Nadpłata Kredytu -->
                         <template id="nadplataKredytuTemplate">
                             <div class="variable-input-group" data-type="nadplata">
                                 <div class="fields-wrapper">
@@ -203,12 +223,18 @@
             </div>
         </div>
 
+        <!-- Sekcja: Wyniki -->
         <div class="result-section" id="resultSection" style="display: none;">
+            <!-- Podsekcja: Nagłówek wyników -->
             <div class="result-header">
                 <h4>Podsumowanie wyników</h4>
                 <button id="generatePdfBtn" class="btn btn-primary btn-sm">Generuj PDF</button>
             </div>
+
+            <!-- Przycisk: Powrót do edycji -->
             <button class="btn btn-secondary mb-3" onclick="showForm()">Powrót do edycji</button>
+
+            <!-- Podsekcja: Wykres i podsumowanie -->
             <div class="result-container">
                 <div class="result-wrapper-chart">
                     <div class="chart-container">
@@ -248,6 +274,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Podsekcja: Harmonogram spłat -->
             <div class="harmonogram-container">
                 <div class="result-wrapper-harmonogram">
                     <div class="harmonogram">
@@ -276,9 +304,10 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script src="https://unpkg.com/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
+    <!-- Skrypty zewnętrzne -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/jspdf@2.5.2/dist/jspdf.umd.min.js"></script>
+    <script src="https://unpkg.com/jspdf-autotable@3.8.3/dist/jspdf.plugin.autotable.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
