--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="nadplataKredytuInputs">
-                                <div class="variable-inputs-wrapper" id="nadplataKredytuInputsWrapper"></div>
+                                <div class="variable-inputs-wrapper" id="nadplataKredytuWrapper"></div>
                                 <button type="button" class="btn btn-secondary btn-sm" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
-
+                        
                         <!-- Podsekcja: Zmienne Oprocentowanie -->
                         <div class="variable-rate-container" id="variableOprocentowanieContainer">
                             <div class="checkbox-row">
@@ -132,7 +132,7 @@
                                 </label>
                             </div>
                             <div class="variable-inputs" id="variableOprocentowanieInputs">
-                                <div class="variable-inputs-wrapper" id="variableOprocentowanieInputsWrapper"></div>
+                                <div class="variable-inputs-wrapper" id="variableOprocentowanieWrapper"></div>
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
