--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <form id="creditForm">
                         <!-- Wiersz 1: Kwota kredytu, Ilość rat, Oprocentowanie -->
                         <div class="form-row">
-                            <div class="form-group">
+                            <div class="form-group box-amount">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="100" value="500000">
@@ -44,8 +44,8 @@
                                 <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="100" value="500000">
                                 <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000,00 zł</div>
                             </div>
-                            <div class="form-group">
-                                "Ilość rat</label>
+                            <div class="form-group box-period">
+                                <label for="iloscRat" class="form-label">Ilość rat</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" value="360">
                                     <span class="input-group-text">mc-y</span>
@@ -53,7 +53,7 @@
                                 <input type="range" class="form-range" id="iloscRatRange" min="12" max="420" step="1" value="360">
                                 <div class="sub-info" id="lata">Ilość lat: 30</div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group box-rate">
                                 <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
@@ -65,7 +65,7 @@
 
                         <!-- Wiersz 2: Rodzaj rat, Prowizja -->
                         <div class="form-row">
-                            <div class="form-group">
+                            <div class="form-group box-select">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
                                     <option value="rowne">Raty równe</option>
@@ -73,7 +73,7 @@
                                 </select>
                                 <div class="sub-info" id="rodzajRatInfo">Wybierz równe lub malejące</div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group box-fee">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.1" value="2">
@@ -127,15 +127,15 @@
                         <template id="variableOprocentowanieTemplate">
                             <div class="variable-input-group" data-type="oprocentowanie">
                                 <div class="fields-wrapper">
-                                    <div class="form-group">
-                                        <label class="form-label">Od którego miesiaca</label>
+                                    <div class="form-group box-period">
+                                        <label class="form-label">Od którego miesiąca</label>
                                         <div class="input-group">
                                             <input type="number" class="form-control variable-cykl" min="2" step="1">
                                             <span class="input-group-text unit-miesiaca">miesiąca</span>
                                         </div>
                                         <input type="range" class="form-range variable-cykl-range" min="2" step="1">
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group box-rate">
                                         <label class="form-label">Nowe oprocentowanie</label>
                                         <div class="input-group">
                                             <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1">
@@ -157,37 +157,43 @@
                         <template id="nadplataKredytuTemplate">
                             <div class="variable-input-group" data-type="nadplata">
                                 <div class="fields-wrapper">
-                                    <div class="form-group">
-                                        <label class="form-label">W którym miesiącu</label>
-                                        <div class="input-group">
-                                            <input type="number" class="form-control variable-cykl" min="1" step="1">
-                                            <span class="input-group-text unit-miesiacu">miesiącu</span>
+                                    <!-- Rząd 1: Typ nadpłaty, Efekt nadpłaty -->
+                                    <div class="form-row">
+                                        <div class="form-group box-select">
+                                            <label class="form-label">Typ nadpłaty</label>
+                                            <select class="form-select nadplata-type-select">
+                                                <option value="Jednorazowa">Jednorazowa</option>
+                                                <option value="Miesięczna">Miesięczna</option>
+                                                <option value="Kwartalna">Kwartalna</option>
+                                                <option value="Roczna">Roczna</option>
+                                            </select>
                                         </div>
-                                        <input type="range" class="form-range variable-cykl-range" min="1" step="1">
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label">Kwota nadpłaty</label>
-                                        <div class="input-group">
-                                            <input type="number" class="form-control variable-rate" min="0" step="1">
-                                            <span class="input-group-text unit-zl">zł</span>
+                                        <div class="form-group box-select">
+                                            <label class="form-label">Efekt nadpłaty</label>
+                                            <select class="form-select nadplata-effect-select">
+                                                <option value="Skróć okres">Skróć okres</option>
+                                                <option value="Zmniejsz ratę">Zmniejsz ratę</option>
+                                            </select>
                                         </div>
-                                        <input type="range" class="form-range variable-rate-range" min="0" step="1">
                                     </div>
-                                    <div class="form-group">
-                                        <label class="form-label">Typ nadpłaty</label>
-                                        <select class="form-select nadplata-type-select">
-                                            <option value="Jednorazowa">Jednorazowa</option>
-                                            <option value="Miesięczna">Miesięczna</option>
-                                            <option value="Kwartalna">Kwartalna</option>
-                                            <option value="Roczna">Roczna</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="form-label">Efekt nadpłaty</label>
-                                        <select class="form-select nadplata-effect-select">
-                                            <option value="Skróć okres">Skróć okres</option>
-                                            <option value="Zmniejsz ratę">Zmniejsz ratę</option>
-                                        </select>
+                                    <!-- Rząd 2: Kwota nadpłaty, W którym miesiącu -->
+                                    <div class="form-row">
+                                        <div class="form-group box-amount">
+                                            <label class="form-label">Kwota nadpłaty</label>
+                                            <div class="input-group">
+                                                <input type="number" class="form-control variable-rate" min="0" step="1">
+                                                <span class="input-group-text unit-zl">zł</span>
+                                            </div>
+                                            <input type="range" class="form-range variable-rate-range" min="0" step="1">
+                                        </div>
+                                        <div class="form-group box-period">
+                                            <label class="form-label">W którym miesiącu</label>
+                                            <div class="input-group">
+                                                <input type="number" class="form-control variable-cykl" min="1" step="1">
+                                                <span class="input-group-text unit-miesiacu">miesiącu</span>
+                                            </div>
+                                            <input type="range" class="form-range variable-cykl-range" min="1" step="1">
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="remove-first-btn-wrapper">
