--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="100" value="500000">
                                     <span class="input-group-text unit-zl">zł</span>
                                 </div>
-                                <input type="range" class="form-range range-slider" id="kwotaRange" min="50000" max="5000000" step="100" value="500000">
+                                <input type="range" class="form-range range-slider" id="kwotaRange" min="50000" max="5000000" step="100" value="500000" style="--value: 500000; --min: 50000; --max: 5000000;">
                                 <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000,00 zł</div>
                             </div>
                             <div class="form-group box-period">
@@ -50,7 +50,7 @@
                                     <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" value="360">
                                     <span class="input-group-text">mc-y</span>
                                 </div>
-                                <input type="range" class="form-range range-slider" id="iloscRatRange" min="12" max="420" step="1" value="360">
+                                <input type="range" class="form-range range-slider" id="iloscRatRange" min="12" max="420" step="1" value="360" style="--value: 360; --min: 12; --max: 420;">
                                 <div class="sub-info" id="lata">Ilość lat: 30</div>
                             </div>
                             <div class="form-group box-rate">
@@ -59,7 +59,7 @@
                                     <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
                                     <span class="input-group-text">%</span>
                                 </div>
-                                <input type="range" class="form-range range-slider" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
+                                <input type="range" class="form-range range-slider" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7" style="--value: 7; --min: 0.1; --max: 25;">
                             </div>
                         </div>
 
@@ -82,7 +82,7 @@
                                         <option value="pln">zł</option>
                                     </select>
                                 </div>
-                                <input type="range" class="form-range range-slider" id="prowizjaRange" min="0" max="1250000" step="0.1" value="2">
+                                <input type="range" class="form-range range-slider" id="prowizjaRange" min="0" max="1250000" step="0.1" value="2" style="--value: 2; --min: 0; --max: 1250000;">
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
