--- a/index.html
+++ b/index.html
@@ -124,18 +124,18 @@
                                                 <div class="form-group box-amount">
                                                     <label class="form-label">Kwota nadpłaty</label>
                                                     <div class="input-group">
-                                                        <input type="number" class="form-control variable-rate" min="0" step="1">
+                                                        <input type="number" class="form-control variable-rate" min="0" max="1000000" step="1" value="1000">
                                                         <span class="input-group-text unit-zl">zł</span>
                                                     </div>
-                                                    <input type="range" class="form-range range-slider variable-rate-range" min="0" step="1">
+                                                    <input type="range" class="form-range range-slider variable-rate-range" min="0" max="1000000" step="1" value="1000">
                                                 </div>
                                                 <div class="form-group box-period">
-                                                    <label class="form-label">W którym miesiącu</label>
+                                                    <label class="form-label">W</label>
                                                     <div class="input-group">
-                                                        <input type="number" class="form-control variable-cykl" min="1" step="1">
+                                                        <input type="number" class="form-control variable-cykl" min="1" max="419" step="1" value="1">
                                                         <span class="input-group-text unit-miesiacu">miesiącu</span>
                                                     </div>
-                                                    <input type="range" class="form-range range-slider variable-cykl-range" min="1" step="1">
+                                                    <input type="range" class="form-range range-slider variable-cykl-range" min="1" max="419" step="1" value="1">
                                                 </div>
                                             </div>
                                         </div>
@@ -159,20 +159,20 @@
                                     <div class="variable-input-group" data-type="oprocentowanie">
                                         <div class="fields-wrapper">
                                             <div class="form-group box-period">
-                                                <label class="form-label">Od którego miesiąca</label>
+                                                <label class="form-label">Od</label>
                                                 <div class="input-group">
-                                                    <input type="number" class="form-control variable-cykl" min="2" step="1">
+                                                    <input type="number" class="form-control variable-cykl" min="2" max="420" step="1" value="2">
                                                     <span class="input-group-text unit-miesiaca">miesiąca</span>
                                                 </div>
-                                                <input type="range" class="form-range range-slider variable-cykl-range" min="2" step="1">
+                                                <input type="range" class="form-range range-slider variable-cykl-range" min="2" max="420" step="1" value="2">
                                             </div>
                                             <div class="form-group box-rate">
-                                                <label class="form-label">Nowe oprocentowanie</label>
+                                                <label class="form-label">Orocentowanie</label>
                                                 <div class="input-group">
-                                                    <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1">
+                                                    <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1" value="7">
                                                     <span class="input-group-text">%</span>
                                                 </div>
-                                                <input type="range" class="form-range range-slider variable-rate-range" min="0.1" max="25" step="0.1">
+                                                <input type="range" class="form-range range-slider variable-rate-range" min="0.1" max="25" step="0.1" value="7">
                                             </div>
                                         </div>
                                     </div>
