--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                     <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.1" value="2">
                                     <select class="form-select jednostka-select" id="jednostkaProwizji">
                                         <option value="procent">%</option>
-                                        <option value="pln">zł</option>
+                                        <option value="zl">zł</option>
                                     </select>
                                 </div>
                                 <input type="range" class="form-range range-slider" id="prowizjaRange" min="0" max="1250000" step="0.1" value="2" style="--value: 2; --min: 0; --max: 1250000;">
