--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button type="button" class="btn btn-functional" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną zmianę</button>
+                                <button type="button" class="btn btn-functional" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną nadpłatę</button>
                             </div>
                         </div>
                         
