--- a/index.html
+++ b/index.html
@@ -98,50 +98,8 @@
                             </div>
                             <div class="variable-inputs" id="nadplataKredytuInputs">
                                 <div class="variable-inputs-wrapper" id="nadplataKredytuWrapper">
-                                    <div class="variable-input-group" data-type="nadplata">
-                                        <div class="fields-wrapper">
-                                            <!-- Rząd 1: Typ nadpłaty, Efekt nadpłaty -->
-                                            <div class="form-row">
-                                                <div class="form-group box-select">
-                                                    <label class="form-label">Typ nadpłaty</label>
-                                                    <select class="form-select nadplata-type-select">
-                                                        <option value="Jednorazowa">Jednorazowa</option>
-                                                        <option value="Miesięczna">Miesięczna</option>
-                                                        <option value="Kwartalna">Kwartalna</option>
-                                                        <option value="Roczna">Roczna</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group box-select">
-                                                    <label class="form-label">Efekt nadpłaty</label>
-                                                    <select class="form-select nadplata-effect-select">
-                                                        <option value="Skróć okres">Skróć okres</option>
-                                                        <option value="Zmniejsz ratę">Zmniejsz ratę</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                            <!-- Rząd 2: Kwota nadpłaty, W którym miesiącu -->
-                                            <div class="form-row">
-                                                <div class="form-group box-amount">
-                                                    <label class="form-label">Kwota nadpłaty</label>
-                                                    <div class="input-group">
-                                                        <input type="number" class="form-control variable-rate" min="0" max="1000000" step="1" value="1000">
-                                                        <span class="input-group-text unit-zl">zł</span>
-                                                    </div>
-                                                    <input type="range" class="form-range range-slider variable-rate-range" min="0" max="1000000" step="1" value="1000">
-                                                </div>
-                                                <div class="form-group box-period">
-                                                    <label class="form-label">W</label>
-                                                    <div class="input-group">
-                                                        <input type="number" class="form-control variable-cykl" min="1" max="419" step="1" value="1">
-                                                        <span class="input-group-text unit-miesiacu">miesiącu</span>
-                                                    </div>
-                                                    <input type="range" class="form-range range-slider variable-cykl-range" min="1" max="419" step="1" value="1">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <!-- Grupy nadpłaty będą generowane dynamicznie przez JavaScript -->
                                 </div>
-                                <button type="button" class="btn btn-functional" id="addNadplataKredytuBtn" aria-label="Dodaj kolejną nadpłatę kredytu">Dodaj kolejną nadpłatę</button>
                             </div>
                         </div>
                         
@@ -167,7 +125,7 @@
                                                 <input type="range" class="form-range range-slider variable-cykl-range" min="2" max="420" step="1" value="2">
                                             </div>
                                             <div class="form-group box-rate">
-                                                <label class="form-label">Orocentowanie</label>
+                                                <label class="form-label">Oprocentowanie</label>
                                                 <div class="input-group">
                                                     <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1" value="7">
                                                     <span class="input-group-text">%</span>
