--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <div class="form-group box-period">
                                 <label for="iloscRat" class="form-label">Ilość rat</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="12" value="360">
+                                    <input type="text" class="form-control" id="iloscRat" min="12" max="420" step="12" value="360">
                                     <span class="input-group-text">miesięcy</span>
                                 </div>
                                 <input type="range" class="form-range range-slider" id="iloscRatRange" min="12" max="420" step="12" value="360" style="--value: 360; --min: 12; --max: 420;">
