--- a/index.html
+++ b/index.html
@@ -114,26 +114,7 @@
                             </div>
                             <div class="variable-inputs" id="variableOprocentowanieInputs">
                                 <div class="variable-inputs-wrapper" id="variableOprocentowanieWrapper">
-                                    <div class="variable-input-group" data-type="oprocentowanie">
-                                        <div class="fields-wrapper">
-                                            <div class="form-group box-period">
-                                                <label class="form-label">Od</label>
-                                                <div class="input-group">
-                                                    <input type="number" class="form-control variable-cykl" min="2" max="420" step="1" value="2">
-                                                    <span class="input-group-text unit-miesiaca">miesiąca</span>
-                                                </div>
-                                                <input type="range" class="form-range range-slider variable-cykl-range" min="2" max="420" step="1" value="2">
-                                            </div>
-                                            <div class="form-group box-rate">
-                                                <label class="form-label">Oprocentowanie</label>
-                                                <div class="input-group">
-                                                    <input type="number" class="form-control variable-rate" min="0.1" max="25" step="0.1" value="7">
-                                                    <span class="input-group-text">%</span>
-                                                </div>
-                                                <input type="range" class="form-range range-slider variable-rate-range" min="0.1" max="25" step="0.1" value="7">
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <!-- Usunięto domyślny wiersz -->
                                 </div>
                                 <button type="button" class="btn btn-functional" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
